--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-router-dom": "^6.14.1"
 	},
 	"devDependencies": {
+		"@types/jest": "^29.5.3",
 		"@types/react": "^18.2.14",
 		"@types/react-dom": "^18.2.6",
 		"@typescript-eslint/eslint-plugin": "^5.61.0",
