--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"react-router-dom": "^6.14.1"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.22.9",
+		"@babel/preset-typescript": "^7.22.5",
 		"@types/jest": "^29.5.3",
 		"@types/react": "^18.2.14",
 		"@types/react-dom": "^18.2.6",
